--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-avion-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-avion-2.cfg
@@ -29,9 +29,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-avion-2-titl
+	title = #RSR-avion-2-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-avion-2-desc
+	description = #RSR-avion-2-desc
 	tags = #autoLOC_500309 //#autoLOC_500309 = aero aircraft cmg command control ?eva fly gyro ?iva moment pilot plane react space stab steer torque
 
 
