--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-250.cfg
@@ -31,9 +31,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-capsule-250-titl
+	title = #RSR-capsule-250-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-capsule-250-desc
+	description = #RSR-capsule-250-desc
 	tags = #autoLOC_500321 //#autoLOC_500321 = capsule cmg control ?eva fly gyro ?iva moment pilot react rocket space stab steer torque
 
 	mass = 3.76
