--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-inline.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-inline.cfg
@@ -31,9 +31,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-cockpit-inline-titl
+	title = #RSR-cockpit-inline-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-cockpit-inline-desc
+	description = #RSR-cockpit-inline-desc
 	tags = #autoLOC_500315 //#autoLOC_500315 = aero aircraft cmg command control ?eva fly gyro ?iva moment pilot plane react space stab steer torque
 
 	mass = 1
