--- a/GameData/RustyStar/RustyStarRockets/Parts/CompoundParts/rsr-fuelline.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/CompoundParts/rsr-fuelline.cfg
@@ -33,9 +33,9 @@ PART
 	category = FuelTank
 	subcategory = 0
 
-	title = #RSS-fuelline-titl
+	title = #RSR-fuelline-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-fuelline-desc
+	description = #RSR-fuelline-desc
 	tags = #autoLOC_500363 //#autoLOC_500363 = asparagus channel hose (lf line ox oxidizer pipe propellant pump tube
 
 	mass = 0.05
