--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rcs-block.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rcs-block.cfg
@@ -27,9 +27,9 @@ PART
 	category = Control
 	subcategory = 0
 
-	title = #RSS-rcs-block-titl
+	title = #RSR-rcs-block-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-rcs-block-desc
+	description = #RSR-rcs-block-desc
 	tags = #autoLOC_8003434 //#autoLOC_8003434 = cluster control dock maneuver manoeuvre react rendezvous rotate stab steer translate
 
 	mass = 0.05
