--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-125.cfg
@@ -30,9 +30,9 @@ PART
 	category = Control
 	subcategory = 0
 
-	title = #RSS-rw-125-titl // Rusty Reaction Wheel
+	title = #RSR-rw-125-titl // Rusty Reaction Wheel
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-rw-125-desc
+	description = #RSR-rw-125-desc
 	tags = #autoLOC_500300 // cmg command control fly gyro moment react stab steer torque
 
 	mass = 0.1
