--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-250.cfg
@@ -29,9 +29,9 @@ PART
 	category = Control
 	subcategory = 0
 
-	title = #RSS-rw-250-titl // Rusty Reaction Wheel 250
+	title = #RSR-rw-250-titl // Rusty Reaction Wheel 250
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-rw-250-desc
+	description = #RSR-rw-250-desc
 	tags = #autoLOC_500288 // cmg command control fly gyro moment react stab steer torque
 
 	mass = 0.18
