--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-1.cfg
@@ -34,9 +34,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = #RSS-sci-lab-1-titl
+	title = #RSR-sci-lab-1-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-sci-lab-1-desc
+	description = #RSR-sci-lab-1-desc
 	tags = #autoLOC_500690 //#autoLOC_500690 = experiment laboratory research science
 
 	mass = 4.25
