--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-2.cfg
@@ -1,4 +1,4 @@
-// rsr-light-obruc-2.cfg v1.8.99.3
+// rsr-light-obruc-250.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,7 +6,7 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-light-obruc-2
+	name = rsr-light-obruc-250
 	oldName = obrucLight2
 	module = Part
 	author = GagaX and zer0Kerbal
@@ -41,24 +41,24 @@ PART
 
 	maxTemp = 2000
 
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = EmmAnim
-		startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
-		endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
-		actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
-		eventAvailableEditor = True
-		eventAvailableFlight = True
-		eventAvailableEVA = True
-		evaDistance = 10
-		allowDeployLimit = True
-		revClampDirection = False
-		revClampSpeed = True
-		revClampPercent = True
-		isOneShot = False
-		defaultActionGroup  = Lights
-	}
+	// MODULE
+	// {
+	// 	name = ModuleAnimateGeneric
+	// 	animationName = EmmAnim
+	// 	startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
+	// 	endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
+	// 	actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
+	// 	eventAvailableEditor = True
+	// 	eventAvailableFlight = True
+	// 	eventAvailableEVA = True
+	// 	evaDistance = 10
+	// 	allowDeployLimit = True
+	// 	revClampDirection = False
+	// 	revClampSpeed = True
+	// 	revClampPercent = True
+	// 	isOneShot = False
+	// 	defaultActionGroup  = Lights
+	// }
 
 	MODULE
 	{
@@ -71,9 +71,9 @@ PART
 		toggleInFlight = True
 		toggleInFlight = True
 		unfocusedRange = 5
-		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
+		endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
+		actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
 		toggleAction = True
 		defaultActionGroup = Lights
 		redCurve
