--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-250-aa.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-250-aa.cfg
@@ -30,18 +30,23 @@ PART
 	title = RSR "Atomic Atom" Atomic Rocket Motor
 	manufacturer = #RSS-Agency-titl
 	description = Advanced characteristics of this engine are made possible by use of Rustonium.
+	tags = #RSS-nuc-tags
 
 	mass = 5.5
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 12
+
 	maxTemp = 2500 // = 4000
 	// heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.85 // engine nozzles are good at radiating, NTRs even better
 	radiatorMax = 0.35 //Default = 0.25 but nuke engines are meant to run hot
+
 	EFFECTS
 	{
 		running_closed
@@ -94,7 +99,7 @@ PART
 		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		exhaustDamage = True
-runningEffectName = running_closed
+		runningEffectName = running_closed
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 400
@@ -113,37 +118,34 @@ runningEffectName = running_closed
 			key = 2 0.001
 		}
 	}
+
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
 		animationName = lightAnimation
-                dependOnEngineState = True
-                responseSpeed = 0.8
+				dependOnEngineState = True
+				responseSpeed = 0.8
 	}
+
 	MODULE
 	{
 		name = ModuleAlternator
+		outputName = #autoLoc_6003026 // Alternator
 		RESOURCE
 		{
 			name = ElectricCharge
 			rate = 5.0
 		}
 	}
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 0
-		maxAmount = 0
-		isTweakable = false
-		hideFlow = true
-	}
-	MODULE
-	{
-		name = ModuleTestSubject
-		environments = 8
-		useStaging = False
-		useEvent = True
-	}
+
+	// RESOURCE
+	// {
+	// 	name = ElectricCharge
+	// 	amount = 0
+	// 	maxAmount = 0
+	// 	isTweakable = false
+	// 	hideFlow = true
+	// }
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -153,16 +155,35 @@ runningEffectName = running_closed
 		falloff = 2.5
 		thrustTransformName = thrustTransform
 	}
-MODULE
+
+	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
 		gimbalRange = 2
-                
-		               	}
-MODULE
+		gimbalResponseSpeed = 40
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
+	}
+
+	MODULE
 	{
 		name = ModuleAnimateHeat
 		ThermalAnim = heat3
 	}
+
+	MODULE
+	{
+		name = ModuleTestSubject
+		environments = 8
+		useStaging = False
+		useEvent = True
+	}
+
 }
